# tampon

./: Cargo.toml  README.md
src/: buffer.rs  bytes_size.rs  compare.rs  deserialize.rs  deserialize_size.rs  error.rs  generate.rs  lib.rs  serialize.rs  serialize_size.rs  tampon.rs  wipe.rs
src/test/: compare_test.rs  generate_test.rs  mod.rs  wipe_test.rs
tests/data/: mod.rs
tests/implementation/: mod.rs
tests/macros/: buffer.rs  bytes_size.rs  deserialize.rs  deserialize_size.rs  mod.rs  serialize_size.rs  try_deserialize.rs
