[package]
name = "tampon"
version = "1.1.0"
authors = ["Baphomat <baphomat@nickelange.studio>"]
edition = "2021"
description = "Specialized crate that contains SAFE Rust functions, macros and trait to serialize / deserialize data structure and/or object in packed bytes."
keywords = ["buffer", "data-structures", "serialize", "macro", "generate"]
categories = ["data-structures", "encoding", "caching", "cryptography"]
repository = "https://github.com/NickelAngeStudio/tampon"
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.9.2"
